[package]
name = "styrolite"
description = "Lightweight, programmatic sandboxing tool"
license = "Apache-2.0"
version = "0.1.1"
homepage = "https://github.com/edera-dev/styrolite"
repository = "https://github.com/edera-dev/styrolite"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
libc = "0.2.174"
log = "0.4.27"
mktemp-rs = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.0", optional = true }

[features]
async = ["dep:tokio"]

[lib]
name = "styrolite"

[[bin]]
name = "styrolite"
path = "bin/styrolite.rs"

[[example]]
name = "styrolite-rundir"
path = "examples/rundir.rs"

[[example]]
name = "styrolite-attach"
path = "examples/attach.rs"
