[package]
name = "styrolite"
description = "Lightweight, programmatic sandboxing tool"
license = "Apache-2.0"
version = "0.1.6"
homepage = "https://github.com/edera-dev/styrolite"
repository = "https://github.com/edera-dev/styrolite"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
libc = "0.2.176"
log = "0.4.28"
mktemp-rs = "0.2.0"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", optional = true }

[features]
async = ["dep:tokio"]

[lib]
name = "styrolite"

[[bin]]
name = "styrolite"
path = "bin/styrolite.rs"

[[example]]
name = "styrolite-rundir"
path = "examples/rundir.rs"

[[example]]
name = "styrolite-attach"
path = "examples/attach.rs"
